Melhorias em responsividade

--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide" data-swiper-autoplay="100">
+                <div class="swiper-slide">
                   <div class="brandLogo">
                     <img
                       src="./src/img/Logotipos _ Clientes/Logo-ArqCoop+.png"
