--- a/index.html
+++ b/index.html
@@ -982,13 +982,11 @@
                   </div>
                 </div>
               </div>
-              <!-- If we need pagination -->
+
               <div class="swiper-pagination"></div>
 
-              <!-- If we need scrollbar -->
               <div class="swiper-scrollbar"></div>
 
-              <!-- If we need navigation buttons -->
             </div>
             <div class="arrows">
               <div class="button-prev" id="prevClient">
@@ -1002,11 +1000,14 @@
         </div>
 
         <div class="partnersSection">
-          <!-- Slider main container -->
+          <div class="partnersSectionText">
+            <h2>Partners</h2>
+          </div>
+
           <div class="swiper" id="partners">
-            <!-- Additional required wrapper -->
+
             <div class="swiper-wrapper">
-              <!-- Slides -->
+
               <div class="swiper-slide" data-swiper-autoplay="100">
                 <div class="swiper-slide-div">
                   <img
